--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>anony</title>
+    <title>pxlnova</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   </head>
@@ -12,8 +12,8 @@
     <main class="main-container">
       <header>
         <img src="/assets/logo.png" alt="Anony Logo" class="logo">
-        <h1>welcome to anony</h1>
-        <p class="subtext">a modern web proxy to protect your privacy online</p>
+        <h1>pxlnova proxy</h1>
+        <p class="subtext">a modern web proxy to unblock websites</p>
       </header>
       <button id="startButton" onclick="window.location.href = '/web/index.html'">start browsing</button>
     </main>
