--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PXLNOVA</title>
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
   </head>
   <body>
     <main class="main-container">
       <header>
-        <img src="/assets/logo.png" alt="Anony Logo" class="logo">
+        <img src="/assets/icon.png" alt="pxlnova Logo" class="logo">
         <h1>pxlnova proxy</h1>
         <p class="subtext">a modern web proxy to unblock websites</p>
       </header>
