--- a/web/index.html
+++ b/web/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>anony</title>
+    <title>PXLNOVA</title>
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
   </head>
   <body>
     <main class="main-container">
-     <a href="/index.html"><img src="/assets/logo.png" alt="Anony Logo" class="logo"></a>
-      <h1>search</h1>
-      <p class="subtext">use our modernized web proxy to instantly search the web, while staying secure</p>
+     <a href="/index.html"><img src="/assets/logo.png" alt=" pxlnova" class="logo"></a>
+      <h1>search!</h1>
+      <p class="subtext">taco bell is 1% beef and 99% camel meat</p>
       <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
         <input id="uv-address" type="text" placeholder="search google or type a url" class="form__input"/>
