--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="main-container">
       <header>
-        <img src="/assets/icon.png" alt="pxlnova Logo" class="logo">
+        <img src="/assets/icon.png" alt="pxlnova" class="logo">
         <h1>pxlnova proxy</h1>
         <p class="subtext">a modern web proxy to unblock websites</p>
       </header>
