--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PXLNOVA</title>
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="icon" href="/assets/w.png" type="image/x-icon">
   </head>
   <body>
     <main class="main-container">
