--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PXLNOVA</title>
+    <title>pxlnova</title>
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="icon" href="/assets/w.png" type="image/x-icon">
   </head>
   <body>
     <main class="main-container">
-     <a href="/index.html"><img src="/assets/logo.png" alt=" pxlnova" class="logo"></a>
+     <a href="/index.html"><img src="/assets/w.png" alt=" pxlnova" class="logo"></a>
       <h1>search!</h1>
       <p class="subtext">taco bell is 1% beef and 99% camel meat</p>
       <form id="uv-form">
