--- a/web/404.html
+++ b/web/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-    <title>anony error</title>
+    <title>error</title>
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="/assets/styles.css" />
     <style>
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-image: url('/assets/wallpaper.png');
+        background-image: url('/assets/wall1.png');
         background-position: center;
         background-size: cover;
         font-family: 'Poppins', sans-serif;
