--- a/web/apps.html
+++ b/web/apps.html
@@ -118,23 +118,31 @@
 <div class="app-container">
     <!-- Example App Card 1 -->
     <div class="app-card">
-        <h3>App 1</h3>
-        <p>App 1 description goes here. It could include features, benefits, and any other details.</p>
-        <a href="https://pxlnova-b8z.pages.dev" target="_blank">Visit App 1</a>
+        <h3>now.gg</h3>
+        <p>Now.gg is an online cloud gaming platform that allows users to play mobile games on a web browser without the need for downloading or installing the games on their devices..<p>
+        <a href="https://pxlnova11.pages.dev/web/uv/service/hvtrs8%2F-nmw%2Cge%2F" target="_blank">play!</a>
     </div>
 
     <!-- Example App Card 2 -->
     <div class="app-card">
-        <h3>App 2</h3>
-        <p>App 2 description goes here. More details about what this app does.</p>
-        <a href="https://pxlnova11.pages.dev" target="_blank">Visit App 2</a>
+        <h3>1v1.lol</h3>
+        <p>1v1.LOL is a fast-paced, multiplayer, browser-based battle royale and building game that draws inspiration from games like Fortnite,</p>
+        <a href="https://pxlnova-b8z.pages.dev/web/uv/service/hvtrs8%2F-1t1%2Clml-" target="_blank">play!</a>
     </div>
 
     <!-- Example App Card 3 -->
     <div class="app-card">
-        <h3>App 3</h3>
-        <p>Description of App 3, outlining its features and functionality.</p>
-        <a href="https://pxlnova4-emp.pages.dev" target="_blank">Visit App 3</a>
+        <h3>subway surfers</h3>
+        <p>Subway Surfers is a highly popular and addictive endless runner mobile game developed by Kiloo and SYBO</p>
+        <a href="https://pxlnova-b8z.pages.dev/web/uv/service/hvtrs8%2F-l%7B4dsd.as%60.cpr%2F" target="_blank">play!</a>
+    </div>
+    
+    
+     <!-- Example App Card 3 -->
+    <div class="app-card">
+        <h3>proxy generator</h3>
+        <p>generate unlimited proxies!</p>
+        <a href="https://pxlnovaea2.pages.dev/web/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Ftigw-ggnpavop2-aacwekl-" target="_blank">play!</a>
     </div>
 </div>
 
