--- a/web/index1.html
+++ b/web/index1.html
@@ -91,8 +91,8 @@
 <body>
 
 <header>
-    <h1>Welcome to Pxlnova</h1>
-    <p>Click the button below to explore the Apps!</p>
+    <h1>Pxlnova</h1>
+    <p>proxy!</p>
 </header>
 
 <div class="button-container">
