--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <h1>pxlnova proxy</h1>
         <p class="subtext">a modern web proxy to unblock websites</p>
       </header>
-      <button id="startButton" onclick="window.location.href = '/web/index.html'">start browsing</button>
+      <button id="startButton" onclick="window.location.href = '/web/index.html'">Start Browsing</button>
+    
+      <button id="redirectButton" onclick="window.location.href = 'https://youlikefart.pages.dev/web/uv/service/hvtrs8%2F-rwb%7B-ju%60.uegbny%2Ccmm-'">apps</button>
     </main>
     <script src="index.js"></script>
   </body>
