--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
       <button id="startButton" onclick="window.location.href = '/web/index.html'">Start Browsing</button>
     
-      <button id="redirectButton" onclick="window.location.href = 'https://youlikefart.pages.dev/web/uv/service/hvtrs8%2F-rwb%7B-ju%60.uegbny%2Ccmm-'">apps</button>
+      <button id="redirectButton" onclick="window.location.href = 'https://ruby-hub.weebly.com-'">apps</button>
     </main>
     <script src="index.js"></script>
   </body>
