--- a/web/apps.html
+++ b/web/apps.html
@@ -116,33 +116,32 @@
 </header>
 
 <div class="app-container">
-    <!-- Example App Card 1 -->
+    <!-- App Card 1 -->
     <div class="app-card">
         <h3>now.gg</h3>
-        <p>Now.gg is an online cloud gaming platform that allows users to play mobile games on a web browser without the need for downloading or installing the games on their devices..<p>
-        <a href="https://pxlnova11.pages.dev/web/uv/service/hvtrs8%2F-nmw%2Cge%2F" target="_blank">play!</a>
+        <p>Now.gg is an online cloud gaming platform that allows users to play mobile games on a web browser without the need for downloading or installing the games on their devices.</p>
+        <a href="https://pxlnova11.pages.dev/web/uv/service/hvtrs8%2F-nmw%2Cge%2F" target="_blank">Play!</a>
     </div>
 
-    <!-- Example App Card 2 -->
+    <!-- App Card 2 -->
     <div class="app-card">
-        <h3>1v1.lol</h3>
-        <p>1v1.LOL is a fast-paced, multiplayer, browser-based battle royale and building game that draws inspiration from games like Fortnite,</p>
-        <a href="https://pxlnova-b8z.pages.dev/web/uv/service/hvtrs8%2F-1t1%2Clml-" target="_blank">play!</a>
+        <h3>1v1.LOL</h3>
+        <p>1v1.LOL is a fast-paced, multiplayer, browser-based battle royale and building game that draws inspiration from games like Fortnite.</p>
+        <a href="https://pxlnova-b8z.pages.dev/web/uv/service/hvtrs8%2F-1t1%2Clml-" target="_blank">Play!</a>
     </div>
 
-    <!-- Example App Card 3 -->
+    <!-- App Card 3 -->
     <div class="app-card">
-        <h3>subway surfers</h3>
-        <p>Subway Surfers is a highly popular and addictive endless runner mobile game developed by Kiloo and SYBO</p>
-        <a href="https://pxlnova-b8z.pages.dev/web/uv/service/hvtrs8%2F-l%7B4dsd.as%60.cpr%2F" target="_blank">play!</a>
+        <h3>Subway Surfers</h3>
+        <p>Subway Surfers is a highly popular and addictive endless runner mobile game developed by Kiloo and SYBO.</p>
+        <a href="https://pxlnova11.pages.dev/web/uv/service/hvtrs8%2F-swbua%7Bgcmg.eivhwb%2Cim%2F!" target="_blank">Play!</a>
     </div>
     
-    
-     <!-- Example App Card 3 -->
+    <!-- Proxy Generator App Card -->
     <div class="app-card">
-        <h3>proxy generator</h3>
-        <p>generate unlimited proxies!</p>
-        <a href="https://pxlnovaea2.pages.dev/web/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Ftigw-ggnpavop2-aacwekl-" target="_blank">play!</a>
+        <h3>Proxy Generator</h3>
+        <p>Generate unlimited proxies to protect your online identity and maintain privacy.</p>
+        <a href="https://pxlnovaea2.pages.dev/web/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Ftigw-ggnpavop2-aacwekl" target="_blank">Generate Proxies!</a>
     </div>
 </div>
 
