--- a/web/loading.html
+++ b/web/loading.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-    <title>loading contents...</title>
+    <title>loading...</title>
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="/assets/styles.css" />
     <style>
@@ -85,13 +85,8 @@
   </head>
 
   <body>
-    <h1>404 - tip! if its taking long this could be an error</h1>
-    <p>refresh</p>
-    <p id="uv-error"></p>
-    <code id="uv-error-code"></code>
-    <button id="uv-register-sw" value="Register service worker">
-      Register ServiceWorker
-    </button>
+    <h1>loading...</h1>
+   <h3> if its taking long just hit refresh this could also be an error<h3>
 
     <!-- New Refresh Button -->
     <button id="refreshButton" onclick="window.location.reload();">Refresh</button> <!-- This will reload the page -->
