--- a/web/loading.html
+++ b/web/loading.html
@@ -87,7 +87,12 @@
   <body>
     <h1>loading...</h1>
    <h3> if its taking long just hit refresh this could also be an error<h3>
-
+<p>refresh</p>
+    <p id="uv-error"></p>
+    <code id="uv-error-code"></code>
+    <button id="uv-register-sw" value="Register service worker">
+      Register ServiceWorker
+    </button>
     <!-- New Refresh Button -->
     <button id="refreshButton" onclick="window.location.reload();">Refresh</button> <!-- This will reload the page -->
 
