--- a/web/loading.html
+++ b/web/loading.html
@@ -89,6 +89,9 @@
     <p>refresh</p>
     <p id="uv-error"></p>
     <code id="uv-error-code"></code>
+    <button id="uv-register-sw" value="Register service worker">
+      Register ServiceWorker
+    </button>
     
     
 
