--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <main class="main-container">
      <a href="/index.html"><img src="/assets/w.png" alt=" pxlnova" class="logo"></a>
       <h1>search!</h1>
-      <p class="subtext">taco bell is 1% beef and 99% camel meat</p>
+      <p class="subtext">shout to camden! skibidi toilet</p>
       <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
         <input id="uv-address" type="text" placeholder="search google or type a url" class="form__input"/>
