--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <button id="startButton" onclick="window.location.href = '/web/index.html'">Start Browsing</button>
       <!-- New Button to Redirect to Another Website -->
-      <button id="redirectButton" onclick="window.location.href = 'https://ruby-hub.weebly.com'">apps</button>
+      <button id="redirectButton" onclick="window.location.href = 'https://radon-games-4bx.pages.dev'">apps</button>
     </main>
     <script src="index.js"></script>
   </body>
