--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -30,8 +30,8 @@
     <main class="main-container">
       <header>
         <img src="/assets/w.png" alt="pxlnova" class="logo">
-        <h1>pxlnova proxy</h1>
-        <p class="subtext">a modern web proxy to unblock websites</p>
+        <h1>pxlnova!</h1>
+        <p class="subtext">a modern web search engine!</p>
       </header>
       <button id="startButton" onclick="window.location.href = '/web/index.html'">Start Browsing</button>
       <!-- New Button to Redirect to Another Website -->
