--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="subtext">a modern web search engine!</p>
       </header>
       <button id="startButton" onclick="loadWebsite('/web/index.html')">Start Browsing</button>
-      <button id="redirectButton" onclick="loadWebsite('https://mathisfun-aml.pages.dev')">Apps</button>
+      <button id="redirectButton" onclick="loadWebsite('/web/apps.html')">Apps</button>
     </main>
 
     <!-- Hidden iframe -->
