--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,111 @@
     <main class="main-container">
       <a href="/index.html"><img src="/assets/w.png" alt="pxlnova" class="logo"></a>
       <h1>search!</h1>
-      <p class="subtext">shout outs to judah 💩!</p>
+      <p class="subtext">
+        <script>
+    const options = [
+    "Time to go on Discord!",
+    "I hate school so much",
+    "Pxlnova is the best.",
+    "Fun Fact: Australia is wider than the moon",
+    "Why are you here? Go study.",
+    "We have spent and earned zero dollars from Pxlnova.",
+    "Did you know: A snail breathes through its foot",
+    "Fun Fact: 20% of Pxlnova was coded with ChatGPT",
+    "What is 9+10?",,
+    "Chromebooks are honestly L's",
+    "Fun Fact: Snakes can predict earthquakes",
+    "Bigfoot is real!",
+    "Did you know: Octopuses have 3 hearts",
+    "Did you pray today? Cause if you didn't-",
+    "Are you piss? Cause urine my heart.",
+    "Beep boop! Are you a robot?",
+    "Did you know I have a discord server?",
+    "How many sides does a circle have?",
+    "You can read btw",
+    "Made you look!",
+    "Redbull gives you wings...",
+    "Since 2020!",
+    "As seen on TV!",
+    "doot doot",
+    "Cold as ice!",
+    "Made in the US!",
+    "Reload the page NOW!",
+    "Downloading your passwords...",
+    "WARNING: You may lose braincells if you proceed!",
+    "Do you bite your ice cream?",
+    "#Relatable",
+    "Fortnite is cringe",
+    "You got games on your phone?",
+    "Powered by hamsters!",
+    "*insert cool explosion*",
+    "Got to go fast!",
+    "Sponsered by RAID SHADOW LEGENDS!",
+    "Powered by 128 Gigs of RAM!",
+    "Powered by 16MB of RAM!",
+    "I'm Slim Shady, yes, I'm the real Shady!",
+    "You're a real jerk!",
+    "w h a t",
+    "what the dog doin?",
+    "I'm gonna pop some tags",
+    "Shoutout to 4chan!",
+    "thx stackoverflow!",
+    "are you a gaemer?",
+    "It is time to get funky!",
+    "We didn't start the fire! It was always burning, since the world's been turning!",
+    "Don't ask questions if you can't handle the answers!",
+    "If you are using Microsoft Edge, you need some help.",
+    "Living in Spain without the S",
+    "Woo! /g/",
+    "youtube.com/watch?v=dQw4w9WgXcQ",
+    "Please stop posting furry images.",
+    "Is this the United Airlines costumer service center?",
+    "POV that one person who's 2 braincells are fighting for second place.",
+    "bottem text",
+    "Why do they call it oven if you oven the cold food of out hot eat the food",
+    "No fun allowed",
+    "Your toes will be pulled tonight",
+    "i do love buying birth certificates from the black market! - Piplup",
+    "'If you are trash go play Fortnite you loser' - Sun Tzu, Art of war",
+    "i wanted free vbucks :(",
+    "Avocados \ud83e\udd51 from Mexico \ud83c\uddf2\ud83c\uddfd",
+    "reload for another message",
+    "Why does the discord server exist",
+    "He stomped on his fruit loops and thus became a cereal killer.",
+    "Techonoblade never dies!",
+    "And just to think I knew him before he was famous",
+    "Trust me, I did not copy Minecraft with this",
+    "It is everyday bro",
+    "That proves you are unusual",
+    "What's my age again?",
+    "This is the 5th time this week, and it's only Monday",
+    "You bum",
+    "Roblox? Cringe!",
+    "Toss the Turtle is pretty fun",
+    "Mission failed, we will get them next time",
+    "NUKE INCOMING!",
+    "I spent too much time making these"
+];
+
+
+function getRandomOption() {
+ const randomNumber = Math.floor(Math.random() * options.length);
+ return options[randomNumber];
+}
+
+
+function setRandomPlaceholder() {
+ const placeholder = document.getElementById("subtext");
+ placeholder.textContent = getRandomOption();
+}
+
+
+setRandomPlaceholder();
+
+
+document.getElementById("placeholder").addEventListener("click", setRandomPlaceholder);
+        </script>
+      </p>
       <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
         <input id="uv-address" type="text" placeholder="search google or type a url" class="form__input"/>
