--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     <main class="main-container">
       <a href="/index.html"><img src="/assets/w.png" alt="pxlnova" class="logo"></a>
       <h1>search!</h1>
-      <p class="subtext">
+      <p id="subtext">
         <script>
     const options = [
     "Time to go on Discord!",
