--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ setRandomPlaceholder();
 
 
 document.getElementById("placeholder").addEventListener("click", setRandomPlaceholder); 
-<script>
+</script>
 </p>
       </header>
       <button id="startButton" onclick="loadWebsite('/web/index.html')">Start Browsing</button>
