--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ document.getElementById("placeholder").addEventListener("click", setRandomPlaceh
 </p>
       </header>
       <button id="startButton" onclick="loadWebsite('/web/index.html')">Start Browsing</button>
-      <button id="redirectButton" onclick="loadWebsite('/web/apps.html')">Apps</button>
+      <button id="redirectButton" onclick="loadWebsite('/web/settings.html')">Settings</button>
     </main>
 
     <!-- Hidden iframe -->
