--- a/index.html
+++ b/index.html
@@ -14,143 +14,108 @@
         <img src="/assets/w.png" alt="pxlnova" class="logo">
         <h1>pxlnova!</h1>
         <p id="subtext">
-<script>
-    const options = [
-    "Time to go on Discord!",
-    "I hate school so much",
-    "Pxlnova is the best.",
-    "Fun Fact: Australia is wider than the moon",
-    "Why are you here? Go study.",
-    "We have spent and earned zero dollars from Pxlnova.",
-    "Did you know: A snail breathes through its foot",
-    "Fun Fact: 20% of Pxlnova was coded with ChatGPT",
-    "What is 9+10?",,
-    "Chromebooks are honestly L's",
-    "Fun Fact: Snakes can predict earthquakes",
-    "Bigfoot is real!",
-    "Did you know: Octopuses have 3 hearts",
-    "Did you pray today? Cause if you didn't-",
-    "Are you piss? Cause urine my heart.",
-    "Beep boop! Are you a robot?",
-    "Did you know I have a discord server?",
-    "How many sides does a circle have?",
-    "You can read btw",
-    "Made you look!",
-    "Redbull gives you wings...",
-    "Since 2020!",
-    "As seen on TV!",
-    "doot doot",
-    "Cold as ice!",
-    "Made in the US!",
-    "Reload the page NOW!",
-    "Downloading your passwords...",
-    "WARNING: You may lose braincells if you proceed!",
-    "Do you bite your ice cream?",
-    "#Relatable",
-    "Fortnite is cringe",
-    "You got games on your phone?",
-    "Powered by hamsters!",
-    "*insert cool explosion*",
-    "Got to go fast!",
-    "Sponsered by RAID SHADOW LEGENDS!",
-    "Powered by 128 Gigs of RAM!",
-    "Powered by 16MB of RAM!",
-    "I'm Slim Shady, yes, I'm the real Shady!",
-    "You're a real jerk!",
-    "w h a t",
-    "what the dog doin?",
-    "I'm gonna pop some tags",
-    "Shoutout to 4chan!",
-    "thx stackoverflow!",
-    "are you a gaemer?",
-    "It is time to get funky!",
-    "We didn't start the fire! It was always burning, since the world's been turning!",
-    "Don't ask questions if you can't handle the answers!",
-    "If you are using Microsoft Edge, you need some help.",
-    "Living in Spain without the S",
-    "Woo! /g/",
-    "youtube.com/watch?v=dQw4w9WgXcQ",
-    "Please stop posting furry images.",
-    "Is this the United Airlines costumer service center?",
-    "POV that one person who's 2 braincells are fighting for second place.",
-    "bottem text",
-    "Why do they call it oven if you oven the cold food of out hot eat the food",
-    "No fun allowed",
-    "Your toes will be pulled tonight",
-    "i do love buying birth certificates from the black market! - Piplup",
-    "'If you are trash go play Fortnite you loser' - Sun Tzu, Art of war",
-    "i wanted free vbucks :(",
-    "Avocados \ud83e\udd51 from Mexico \ud83c\uddf2\ud83c\uddfd",
-    "reload for another message",
-    "Why does the discord server exist",
-    "He stomped on his fruit loops and thus became a cereal killer.",
-    "Techonoblade never dies!",
-    "And just to think I knew him before he was famous",
-    "Trust me, I did not copy Minecraft with this",
-    "It is everyday bro",
-    "That proves you are unusual",
-    "What's my age again?",
-    "This is the 5th time this week, and it's only Monday",
-    "You bum",
-    "Roblox? Cringe!",
-    "Toss the Turtle is pretty fun",
-    "Mission failed, we will get them next time",
-    "NUKE INCOMING!",
-    "I spent too much time making these"
-];
+          <script>
+            const options = [
+              "Time to go on Discord!",
+              "I hate school so much",
+              "Pxlnova is the best.",
+              "Fun Fact: Australia is wider than the moon",
+              "Why are you here? Go study.",
+              "We have spent and earned zero dollars from Pxlnova.",
+              "Did you know: A snail breathes through its foot",
+              "Fun Fact: 20% of Pxlnova was coded with ChatGPT",
+              "What is 9+10?",
+              "Chromebooks are honestly L's",
+              "Fun Fact: Snakes can predict earthquakes",
+              "Bigfoot is real!",
+              "Did you know: Octopuses have 3 hearts",
+              "Did you pray today? Cause if you didn't-",
+              "Are you piss? Cause urine my heart.",
+              "Beep boop! Are you a robot?",
+              "Did you know I have a discord server?",
+              "How many sides does a circle have?",
+              "You can read btw",
+              "Made you look!",
+              "Redbull gives you wings...",
+              "Since 2020!",
+              "As seen on TV!",
+              "doot doot",
+              "Cold as ice!",
+              "Made in the US!",
+              "Reload the page NOW!",
+              "Downloading your passwords...",
+              "WARNING: You may lose braincells if you proceed!",
+              "Do you bite your ice cream?",
+              "#Relatable",
+              "Fortnite is cringe",
+              "You got games on your phone?",
+              "Powered by hamsters!",
+              "*insert cool explosion*",
+              "Got to go fast!",
+              "Sponsored by RAID SHADOW LEGENDS!",
+              "Powered by 128 Gigs of RAM!",
+              "Powered by 16MB of RAM!",
+              "I'm Slim Shady, yes, I'm the real Shady!",
+              "You're a real jerk!",
+              "w h a t",
+              "what the dog doin?",
+              "I'm gonna pop some tags",
+              "Shoutout to 4chan!",
+              "thx stackoverflow!",
+              "are you a gaemer?",
+              "It is time to get funky!",
+              "We didn't start the fire! It was always burning, since the world's been turning!",
+              "Don't ask questions if you can't handle the answers!",
+              "If you are using Microsoft Edge, you need some help.",
+              "Living in Spain without the S",
+              "Woo! /g/",
+              "youtube.com/watch?v=dQw4w9WgXcQ",
+              "Please stop posting furry images.",
+              "Is this the United Airlines customer service center?",
+              "POV that one person who's 2 braincells are fighting for second place.",
+              "bottom text",
+              "Why do they call it oven if you oven the cold food of out hot eat the food",
+              "No fun allowed",
+              "Your toes will be pulled tonight",
+              "i do love buying birth certificates from the black market! - Piplup",
+              "'If you are trash go play Fortnite you loser' - Sun Tzu, Art of war",
+              "i wanted free vbucks :(",
+              "Avocados 🥑 from Mexico 🇲🇽",
+              "reload for another message",
+              "Why does the discord server exist",
+              "He stomped on his fruit loops and thus became a cereal killer.",
+              "Techonoblade never dies!",
+              "And just to think I knew him before he was famous",
+              "Trust me, I did not copy Minecraft with this",
+              "It is everyday bro",
+              "That proves you are unusual",
+              "What's my age again?",
+              "This is the 5th time this week, and it's only Monday",
+              "You bum",
+              "Roblox? Cringe!",
+              "Toss the Turtle is pretty fun",
+              "Mission failed, we will get them next time",
+              "NUKE INCOMING!",
+              "I spent too much time making these"
+            ];
 
+            function getRandomOption() {
+              const randomNumber = Math.floor(Math.random() * options.length);
+              return options[randomNumber];
+            }
 
-function getRandomOption() {
- const randomNumber = Math.floor(Math.random() * options.length);
- return options[randomNumber];
-}
+            function setRandomPlaceholder() {
+              const placeholder = document.getElementById("subtext");
+              placeholder.textContent = getRandomOption();
+            }
 
-
-function setRandomPlaceholder() {
- const placeholder = document.getElementById("subtext");
- placeholder.textContent = getRandomOption();
-}
-
-
-setRandomPlaceholder();
-
-
-document.getElementById("placeholder").addEventListener("click", setRandomPlaceholder); 
-</script>
-</p>
+            setRandomPlaceholder();
+          </script>
+        </p>
       </header>
-      <button id="startButton" onclick="loadWebsite('/web/index.html')">Start Browsing</button>
-      <button id="redirectButton">Settings</button>
+      <button id="startButton" onclick="window.location.href='/web/index.html';">Start Browsing</button>
+      <button id="redirectButton" onclick="window.location.href='./settings.html';">Settings</button>
     </main>
-
-    <!-- Hidden iframe -->
-    <iframe id="webFrame"></iframe>
-
-    <script>
-      function requestFullScreen(element) {
-        var requestMethod = element.requestFullScreen || element.webkitRequestFullScreen || element.mozRequestFullScreen || element.msRequestFullscreen;
-        if (requestMethod) {
-          requestMethod.call(element);
-        } else if (typeof window.ActiveXObject !== "undefined") {
-          var wscript = new ActiveXObject("WScript.Shell");
-          if (wscript !== null) {
-            wscript.SendKeys("{f11}");
-          }
-        }
-      }
-
-      function loadWebsite(url) {
-        var iframe = document.getElementById("webFrame");
-        iframe.src = url;
-        iframe.style.display = "block"; // Make iframe visible
-        document.body.className = "fullScreen";
-        requestFullScreen(document.body);
-      }
-
-      document.getElementById("redirectButton").addEventListener("click", redirect);
-
-      function redirect(){ window.location = "./settings.html"; }
-    </script>
     <script src="index.js"></script>
   </body>
 </html>
