--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
 
   <script src="/web/uv/uv.bundle.js"></script>
   <script src="/web/uv/uv.config.js"></script>
-  <script src="/assets/random-placeholder.js"></script>
-  <script src="/assets/uv-scripts.js"></script>
+  <script src="/web/random-placeholder.js"></script>
+  <script src="/web/uv-scripts.js"></script>
 </body>
 </html>
