--- a/web/index.html
+++ b/web/index.html
@@ -36,9 +36,9 @@
   <!-- Hidden iframe -->
   <iframe id="webFrame"></iframe>
 
-  <script src="/web/uv/uv.bundle.js"></script>
-  <script src="/web/uv/uv.config.js"></script>
-  <script src="/web/random-placeholder.js"></script>
-  <script src="/web/uv-scripts.js"></script>
+<script src="/web/uv/uv.bundle.js"></script>
+<script src="/web/uv/uv.config.js"></script>
+<script src="/web/uv/uv-scripts.js"></script>
+<script src="/web/random-placeholder.js"></script>
 </body>
 </html>
