--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,6 @@
 <script src="/web/uv/uv.bundle.js"></script>
 <script src="/web/uv/uv.config.js"></script>
 <script src="/web/random-placeholder.js"></script>
-<script src="/web//uv-scripts.js"></script>
+<script src="/web/uv-scripts.js"></script>
 </body>
 </html>
